Fix a typo in device number and comment.

--- a/sk.html
+++ b/sk.html
@@ -3263,7 +3263,7 @@ TAFSCHK&rarr;		h<sup>1</sup>STE TAFST
 		RFD<sub>4</sub><sub>6</sub>#+1
 		<sup>1</sup>SKX<sub>3</sub><sub>6</sub>4	**ERR CNTR
 		SKX<sub>4</sub><sub>1</sub>{JPD #}
-		<sup>1</sup>IOS<sub>1</sub><sub>1</sub>30000	**CONNECTION IOA
+		<sup>1</sup>IOS<sub>4</sub><sub>1</sub>30000	**CONNECT IOA
 		<sup>1</sup>DPX<sub>3</sub><sub>4</sub>{TPK&beta;}+1	**SAVE SEARCH NO.
 		<sup>2</sup>DPX<sub>3</sub><sub>4</sub>TAFBL	**ORIGINAL NO.
 		<sup>2</sup><sup>1</sup>COM TAFBL 	** -(ORIG NO.) [some smudge  after COM, interpreting as junk]
@@ -7951,7 +7951,7 @@ TAFSCHK&rarr;		h<sup>1</sup>STE TAFST
 		RFD<sub>4</sub><sub>6</sub>#+1
 		<sup>1</sup>SKX<sub>3</sub><sub>6</sub>4	**ERR CNTR
 		SKX<sub>4</sub><sub>1</sub>{JPD #}
-		<sup>1</sup>IOS<sub>1</sub><sub>1</sub>30000	**CONNECTION IOA
+		<sup>1</sup>IOS<sub>4</sub><sub>1</sub>30000	**CONNECT IOA
 		<sup>1</sup>DPX<sub>3</sub><sub>4</sub>{TPK&beta;}+1	**SAVE SEARCH NO.
 		<sup>2</sup>DPX<sub>3</sub><sub>4</sub>TAFBL	**ORIGINAL NO.
 		<sup>2</sup><sup>1</sup>COM TAFBL 	** -(ORIG NO.) [some smudge  after COM, interpreting as junk]
